// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`baseSVGDotColor.vue renders correctly 1`] = `
<div
  class="svg-dot-container"
>
  <svg
    class="svg-dot-color"
    style="--size: 15px; --backgroundColor: #456789;"
  >
    <rect
      height="15px"
      rx="20"
      ry="20"
      style="stroke-opacity: 1; stroke-linejoin: round; stroke-linecap: round; stroke-width: 3; fill-opacity: 0.2; fill-rule: evenodd;"
      width="15px"
      x="0"
      y="0"
    />
  </svg>
</div>
`;

exports[`baseSVGDotColor.vue renders correctly the svg with the default values 1`] = `
<div
  class="svg-dot-container"
>
  <svg
    class="svg-dot-color"
    style="--size: 29px; --backgroundColor: #456789;"
  >
    <rect
      height="29px"
      rx="10"
      ry="10"
      style="stroke-opacity: 1; stroke-linejoin: round; stroke-linecap: round; stroke-width: 3; fill-opacity: 0.2; fill-rule: evenodd;"
      width="29px"
      x="0"
      y="0"
    />
  </svg>
</div>
`;
